fix: valida edicoes e exclusoes com vinculos e melhora avisos